package controller;

public class GameController {
    public GameController() {}
}
