package model;

public class StartingTile extends Corner {
    public StartingTile() {
        super();
    }

    public StartingTile(Direction orientation) {
        super(orientation);
    }
}
