package view;
import model.GameObserver;

import javax.swing.*; //peut-être spécifier seulement les composants utilisés

public class GameWindow implements GameObserver {
    public GameWindow() {}

    @Override
    public void updateGameBoard() {

    }

    @Override
    public void updatePlayerPosition() {

    }

    @Override
    public void updateGoalsDeck() {

    }

    @Override
    public void updateGameStatus() {

    }
}
